--- a/Realestate/idex.html
+++ b/Realestate/idex.html
@@ -43,87 +43,90 @@
             <section>
                 <h2>Houses and penthouses</h2>
 
-                <div>
+                    <div class="houses-container">
 
-                    <div class="house-item">
-                        <div class="house-itme-img">
-                            <img src="./img/announcement1.jpg" alt="House">
+                        <div class="house-item">
+                            <div class="house-itme-img">
+                                <img src="./img/announcement1.jpg" alt="House">
+                            </div>
+                            <div class="house-item-text">
+                                <h3>Luxury house on the lake</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quae! Et eos, unde quaerat dolore reprehenderit sapiente nam minus ullam repellat, suscipit repudiandae nisi est aspernatur, ab similique animi vero?</p>
+                                <p>3,000,000</p>
+
+                                <ul class="item-container">
+                                    <li class="item-num">
+                                        <img src="./Img/icon_wc.svg" alt="">
+                                        <p>3</p>
+                                    </li>
+                                    <li class="item-num">
+                                        <img src="./Img/icon_room.svg" alt="">
+                                        <p>4</p>
+                                    </li>
+                                    <li class="item-num">
+                                        <img src="./Img/icon_parking.svg" alt="">
+                                        <p>4</p>
+                                    </li>
+                                </ul>
+
+                                <a href="#" class="btn-details" >See details</a>
+                            </div>
                         </div>
-                        <div class="house-item-text">
-                            <h3>Luxury house on the lake</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quae! Et eos, unde quaerat dolore reprehenderit sapiente nam minus ullam repellat, suscipit repudiandae nisi est aspernatur, ab similique animi vero?</p>
-                            <p>3,000,000</p>
+                        <div class="house-item">
+                            <div class="house-itme-img">
+                                <img src="./img/announcement2.jpg" alt="House">
+                            </div>
+                            <div class="house-item-text">
+                                <h3>Luxury House</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quae! Et eos, unde quaerat dolore reprehenderit sapiente nam minus ullam repellat, suscipit repudiandae nisi est aspernatur, ab similique animi vero?</p>
+                                <p>3,000,000</p>
 
-                            <ul class="flex-parent-between">
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_wc.svg" alt="">
-                                    <p>3</p>
-                                </li>
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_room.svg" alt="">
-                                    <p>4</p>
-                                </li>
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_parking.svg" alt="">
-                                    <p>4</p>
-                                </li>
-                            </ul>
+                                <ul class="item-container">
+                                    <li class="flex-parent-between">
+                                        <img src="./Img/icon_wc.svg" alt="">
+                                        <p>3</p>
+                                    </li>
+                                    <li class="item-num">
+                                        <img src="./Img/icon_room.svg" alt="">
+                                        <p>4</p>
+                                    </li>
+                                    <li class="item-num">
+                                        <img src="./Img/icon_parking.svg" alt="">
+                                        <p>3</p>
+                                    </li>
+                                </ul>
 
-                            <a href="#" class="btn-details" >See details</a>
+                                <a href="#" class="btn-details" >See details</a>
+                            </div>
                         </div>
-                        <div class="house-itme-img">
-                            <img src="./img/announcement2.jpg" alt="House">
+                        <div class="house-item">
+                            <div class="house-itme-img">
+                                <img src="./img/announcement3.jpg" alt="House">
+                            </div>
+                            <div class="house-item-text">
+                                <h3>House with a Pool</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quae! Et eos, unde quaerat dolore reprehenderit sapiente nam minus ullam repellat, suscipit repudiandae nisi est aspernatur, ab similique animi vero?</p>
+                                <p>3,000,000</p>
+
+                                <ul class="flex-parent-between">
+                                    <li class="item-num">
+                                        <img src="./Img/icon_wc.svg" alt="">
+                                        <p>3</p>
+                                    </li>
+                                    <li class="item-num">
+                                        <img src="./Img/icon_room.svg" alt="">
+                                        <p>4</p>
+                                    </li>
+                                    <li class="item-num">
+                                        <img src="./Img/icon_parking.svg" alt="">
+                                        <p>3</p>
+                                    </li>
+                                </ul>
+
+                                <a href="#" class="btn-details" >See details</a>
+                            </div>
                         </div>
-                        <div class="house-item-text">
-                            <h3>Luxury House</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quae! Et eos, unde quaerat dolore reprehenderit sapiente nam minus ullam repellat, suscipit repudiandae nisi est aspernatur, ab similique animi vero?</p>
-                            <p>3,000,000</p>
-
-                            <ul class="flex-parent-between">
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_wc.svg" alt="">
-                                    <p>3</p>
-                                </li>
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_room.svg" alt="">
-                                    <p>4</p>
-                                </li>
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_parking.svg" alt="">
-                                    <p>3</p>
-                                </li>
-                            </ul>
-
-                            <a href="#" class="btn-details" >See details</a>
-                        </div>
-                        <div class="house-itme-img">
-                            <img src="./img/announcement3.jpg" alt="House">
-                        </div>
-                        <div class="house-item-text">
-                            <h3>House with a Pool</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quae! Et eos, unde quaerat dolore reprehenderit sapiente nam minus ullam repellat, suscipit repudiandae nisi est aspernatur, ab similique animi vero?</p>
-                            <p>3,000,000</p>
-
-                            <ul class="flex-parent-between">
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_wc.svg" alt="">
-                                    <p>3</p>
-                                </li>
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_room.svg" alt="">
-                                    <p>4</p>
-                                </li>
-                                <li class="flex-parent-between">
-                                    <img src="./Img/icon_parking.svg" alt="">
-                                    <p>3</p>
-                                </li>
-                            </ul>
-
-                            <a href="#" class="btn-details" >See details</a>
-                        </div>
-
-                    </div>
-                </div>    
+                    </div>    
             </section>
         </div>
     </main>
